fixed height cutoff issue

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     color: white;
     background: linear-gradient(to right, #30cfd0, #330867);
     margin: 0;
-    height: 100vh;
+    min-height: 100vh;
     justify-content: center;
     gap: 1.25rem;
 }
